--- a/css/landing_page.css
+++ b/css/landing_page.css
@@ -2,3 +2,20 @@
   -webkit-flex-basis: 350px !important;;
   flex-basis: 350px !important;;
 }
+
+/* Custom css for navigation and promotion card paragraph type fields. */
+.paragraph-type--navigation-card .summary-message-group,
+.paragraph-type--navigation-card .customise-field-group,
+.paragraph-type--promotion-card .customise-field-group,
+.paragraph-type--promotion-card .summary-message-group {
+  background-color: transparent;
+  border: none;
+  padding-left: 0;
+}
+
+.paragraph-type--navigation-card .summary-message-group .fieldset-legend,
+.paragraph-type--navigation-card .customise-field-group .fieldset-legend,
+.paragraph-type--promotion-card .summary-message-group .fieldset-legend,
+.paragraph-type--promotion-card .customise-field-group .fieldset-legend {
+  text-transform: none;
+}
