[SDPA-4978] Added feedback changes and error fix for publication page card enhancer error.

--- a/css/landing_page.css
+++ b/css/landing_page.css
@@ -18,4 +18,5 @@
 .paragraph-type--promotion-card .summary-message-group .fieldset-legend,
 .paragraph-type--promotion-card .customise-field-group .fieldset-legend {
   text-transform: none;
+  letter-spacing: normal;
 }
