Updated UI of Landing page node form. (#124)
* Updated widget of header and content component field, form layout of Landing Page and cms improvement work.

--- a/css/landing_page.css
+++ b/css/landing_page.css
@@ -1,6 +1,24 @@
-.js .paragraph-type-title {
+/**
+ * @file
+ * Styling changes to the Landing page node form.
+ */
+
+.node-form-landing-page .js .paragraph-type-title {
   -webkit-flex-basis: 350px !important;;
   flex-basis: 350px !important;;
+}
+
+.node-form-landing-page .layout-region-node-main .form-radios .form-item {
+  display: inline-block;
+  margin-right: 2em;
+}
+
+.node-form-landing-page .field--widget-paragraphs .node-landing-page-alternative-paragraph  > .description,
+.node-form-landing-page .field--widget-paragraphs .node-landing-page-alternative-paragraph > .clearfix .paragraphs-add-wrapper.form-wrapper {
+  text-align: center;
+}
+.node-form-landing-page .field--widget-paragraphs .node-landing-page-alternative-paragraph > .clearfix .paragraphs-add-wrapper.form-wrapper .paragraphs-add-suffix {
+  display:none;
 }
 
 /* Custom css for navigation and promotion card paragraph type fields. */
