[SDPA-6056] Deletion text spinner overlapping
- Arranges the overlapping element.

--- a/css/landing_page.css
+++ b/css/landing_page.css
@@ -38,3 +38,9 @@
   text-transform: none;
   letter-spacing: normal;
 }
+
+div.dropbutton-multiple .dropbutton-action .ajax-progress {
+  position: relative;
+  top: -4px;
+  left: 30px;
+}
